--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -1,3 +1,22 @@
+*,
+*::after,
+*::before {
+  padding: auto;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+body {
+  background-color: rgb(245, 244, 244);
+}
+
+section {
+  height: 100vh;
+}
+
+.main-sect {
+  display: grid;
+  place-items: center;
+}
 
 /*# sourceMappingURL=main.css.map */
