--- a/src/style/sass/main_components/_reset.scss
+++ b/src/style/sass/main_components/_reset.scss
@@ -7,12 +7,11 @@
 }
 
 body{
-    height: 100vh;
     background-color: rgb(245, 244, 244);
 }
-// section{
-
-// }
+section{
+    height: 100vh;
+}
 
 footer{
     background-color: #202020;
