--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -19,42 +19,49 @@ footer {
   color: white;
 }
 
-.the-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.sctn {
+  overflow: hidden;
+  position: relative;
+  background-color: #f7f5f3;
 }
-
-.main-page_container {
+.sctn .elmnt {
+  position: absolute;
+}
+.sctn .elmnt_1 {
+  width: 150%;
+  height: 70%;
+  left: -3rem;
+  top: -5rem;
+}
+.sctn .elmnt_2 {
+  width: 150%;
+  left: -3rem;
+  top: -1rem;
+}
+.sctn .main_title {
+  display: grid;
+  place-items: center;
+  gap: 0.75rem;
+  position: relative;
+  text-align: center;
+  top: 5rem;
+  padding-bottom: 1rem;
+}
+.sctn .main_title p {
+  color: rgb(184, 168, 83);
   font-family: "Work Sans";
-  height: 100%;
-  width: 100%;
-  display: grid;
-  place-items: center;
+  width: 50%;
+  font-weight: 200;
 }
-.main-page_container .sctn {
-  display: grid;
-  place-items: center;
-  width: 100%;
-}
-.main-page_container .sctn .square-element {
-  padding: 1rem 2rem;
-  font-weight: bold;
-  background-color: rgb(164, 218, 186);
-}
-.main-page_container .sctn-1 {
-  background-color: rgb(255, 245, 245);
-}
-.main-page_container .sctn-2 {
-  background-color: rgb(113, 158, 117);
-}
-.main-page_container .sctn-3 {
-  background-color: rgb(255, 245, 245);
+.sctn .main_title h1 {
+  color: rgb(184, 168, 83);
+  font-family: "Parisienne", cursive;
+  font-size: 6rem;
+  font-weight: 100;
+  line-height: 0.9;
 }
 
 .footer-section {
-  width: 100%;
   font-size: 0.75rem;
   font-family: "Work Sans";
   padding: 0.5rem;
