--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -38,6 +38,12 @@ footer {
   left: -3rem;
   top: -1rem;
 }
+.sctn .elmnt_3 {
+  z-index: 10;
+  width: 150%;
+  left: -3rem;
+  bottom: -2rem;
+}
 .sctn .main_title {
   display: grid;
   place-items: center;
@@ -59,6 +65,16 @@ footer {
   font-size: 6rem;
   font-weight: 100;
   line-height: 0.9;
+}
+.sctn .text_complement {
+  display: grid;
+  place-items: center;
+  position: relative;
+  text-align: center;
+  bottom: -17rem;
+  font-size: 1.25rem;
+  font-weight: 300;
+  font-family: "Work Sans";
 }
 
 .footer-section {
