--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -72,8 +72,9 @@ $background_2:#E5DED9;
             // position: relative;
             color: rgb(184, 168, 83);
             font-family: $work-sans;
-            width: 50%;
+            width: 70%;
             font-weight: 200;
+            font-size: 1.25rem;
 
         }
         h1{
