--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -56,8 +56,9 @@ footer {
 .sctn .main_title p {
   color: rgb(184, 168, 83);
   font-family: "Work Sans";
-  width: 50%;
+  width: 70%;
   font-weight: 200;
+  font-size: 1.25rem;
 }
 .sctn .main_title h1 {
   color: rgb(184, 168, 83);
