--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -44,6 +44,26 @@ footer {
   left: -3rem;
   bottom: -2rem;
 }
+.sctn .elmnt_4_left {
+  width: 30%;
+  left: -0.25rem;
+  transform: rotate(20deg) translateY(50%);
+}
+.sctn .elmnt_4_right {
+  transform: rotateY(180deg) translateY(80%);
+  width: 30%;
+  right: -2rem;
+}
+.sctn .elmnt_5_left {
+  width: 35%;
+  left: 2.5rem;
+  transform: rotate3d(2, 1, 1, 40deg) translateY(170%);
+}
+.sctn .elmnt_5_right {
+  transform: rotateY(180deg) translateY(170%);
+  width: 36%;
+  right: -4rem;
+}
 .sctn .main_title {
   display: grid;
   place-items: center;
