--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -58,6 +58,36 @@ $background_2:#E5DED9;
         left: -3rem;
         bottom: -2rem;
     }
+    .elmnt_4_left{
+        // z-index: 10;
+        width: 30%;
+        left: -.25rem;
+        transform: rotate(20deg) translateY(50%);
+        // bottom: -2rem;
+    }
+    
+    .elmnt_4_right{
+        transform: rotateY(180deg)  translateY(80%);
+        width: 30%;
+
+        right: -2rem;
+
+    }
+    .elmnt_5_left{
+        // z-index: 10;
+        width: 35%;
+        left: 2.5rem;
+        transform: rotate3d(2, 1, 1, 40deg) translateY(170%)  ;
+        // bottom: -2rem;
+    }
+    
+    .elmnt_5_right{
+        transform: rotateY(180deg)  translateY(170%) ;
+        width: 36%;
+
+        right: -4rem;
+
+    }
 
     .main_title{
         display: grid;
