--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -61,31 +61,35 @@ $background_2:#E5DED9;
     .elmnt_4_left{
         // z-index: 10;
         width: 30%;
-        left: -.25rem;
-        transform: rotate(20deg) translateY(50%);
+        left: -3rem;
+        top: 5rem;
+        animation: leaves 20s infinite ease;
+        // transform: rotate(20deg) translateY(50%);
         // bottom: -2rem;
     }
     
     .elmnt_4_right{
-        transform: rotateY(180deg)  translateY(80%);
+        animation: leaves 17s infinite ease;
+        rotate:  y 180deg;
         width: 30%;
-
-        right: -2rem;
-
+        right: -3rem;
+        
     }
     .elmnt_5_left{
-        // z-index: 10;
+        animation: leaves 17s infinite ease;
+        animation-direction: reverse;
         width: 35%;
-        left: 2.5rem;
-        transform: rotate3d(2, 1, 1, 40deg) translateY(170%)  ;
-        // bottom: -2rem;
+        left: -3.5rem;
+        top: 20rem;
     }
     
     .elmnt_5_right{
-        transform: rotateY(180deg)  translateY(170%) ;
+        animation: leaves 17s infinite ease;
+        animation-direction: reverse;
+        rotate:  y 180deg;
         width: 36%;
-
         right: -4rem;
+        top: 18rem;
 
     }
 
@@ -141,4 +145,17 @@ $background_2:#E5DED9;
     display: grid;
     place-items: center;
     height: max-content;
+}
+
+
+@keyframes leaves {
+    0%{
+        transform: rotate(20deg);
+    }
+    50%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(20deg);
+    }
 }
