--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -133,6 +133,28 @@ $background_2:#E5DED9;
         // padding-bottom: 1rem;
 
     }
+
+
+}
+
+.sctn-map{
+    display: grid;
+    place-items: center;
+    .mapouter{
+        position:relative;
+        text-align:right;
+        height:500px;
+        width:100%;
+    }
+    
+    .gmap_canvas {
+        overflow:hidden;
+        background:none!important;
+        height:500px;
+        width:100%;
+        
+    }
+
 }
 
 
