--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -39,11 +39,31 @@ footer {
 }
 .sctn .first-container {
   display: grid;
+  grid-template-rows: repeat(2, 1fr);
   place-items: center;
   width: 80%;
   height: 70%;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
+.sctn .first-container .text-card_container .main-tittle {
+  color: rgb(184, 168, 83);
+  font-family: "Parisienne", cursive;
+  font-size: 4rem;
+  text-align: center;
+  line-height: 0.6;
+  font-weight: 100;
+}
+.sctn .first-container .text-card_container .main-tittle .middle {
+  font-size: 3.5rem;
+}
+.sctn .first-container .img-card_container {
+  display: flex;
+  height: 100%;
+}
+.sctn .first-container .img-card_container .img-card {
+  object-fit: cover;
+  max-width: 100%;
 }
 
 .footer-section {
