--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -50,15 +50,27 @@ $background_2:#E5DED9;
     }
 
     .first-container{
+        z-index: 10;
         display: grid;
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 50%);
+        // justify-content: center;
+        // align-items: center;
         place-items: center;
         width: 80%;
         height: 70%;
         background-color: white;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
         
+        .corner-flower{
+            position: absolute;
+        }
+        
         .text-card_container{
+            .intro{
+                font-family: $work-sans;
+                padding-bottom: 1.5rem;
+                font-weight: 300;
+            }
             // display: grid;
             
             .main-tittle{
@@ -79,7 +91,7 @@ $background_2:#E5DED9;
             height: 100%;
             .img-card{
                 object-fit: cover;
-                max-width: 100%;
+                width: 100%;
             }
         }
     
