--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -50,6 +50,7 @@ $background_2:#E5DED9;
     }
 
     .first-container{
+        position: relative;
         z-index: 10;
         display: grid;
         grid-template-rows: repeat(2, 50%);
@@ -63,6 +64,18 @@ $background_2:#E5DED9;
         
         .corner-flower{
             position: absolute;
+            
+            width: 80%;
+            height: 80%;
+            // background-color: #701717;
+            top: -5%;
+            right: -25%;
+
+
+            // .flwr_1{
+            //     position: relative;
+            //     width: 10%;
+            // }
         }
         
         .text-card_container{
@@ -76,7 +89,7 @@ $background_2:#E5DED9;
             .main-tittle{
                 color:  rgb(184, 168, 83);
                 font-family: $parisiene;
-                font-size: 4rem;
+                font-size: 5rem;
                 text-align: center;
                 line-height: .6;
                 font-weight: 100;
@@ -94,7 +107,6 @@ $background_2:#E5DED9;
                 width: 100%;
             }
         }
-    
     }
 
     // .elmnt{
