--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -66,10 +66,14 @@ $background_2:#E5DED9;
             position: absolute;
             
             width: 80%;
-            height: 80%;
+            // height: 80%;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
             // background-color: #701717;
-            top: -5%;
-            right: -25%;
+            top: -20%;
+            right: -.3%;
+            transform: rotate(-65deg) ;
 
 
             // .flwr_1{
