--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -65,21 +65,20 @@ $background_2:#E5DED9;
         .corner-flower{
             position: absolute;
             
-            width: 80%;
+            width: 100%;
             // height: 80%;
             text-align: center;
             margin-left: auto;
             margin-right: auto;
             // background-color: #701717;
             top: -20%;
-            right: -.3%;
             transform: rotate(-65deg) ;
 
 
-            // .flwr_1{
-            //     position: relative;
-            //     width: 10%;
-            // }
+            .flwr_1{
+                position: relative;
+                width: 100%;
+            }
         }
         
         .text-card_container{
