--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -58,28 +58,36 @@ $background_2:#E5DED9;
         // align-items: center;
         place-items: center;
         width: 80%;
-        height: 70%;
+        height: 55%;
         background-color: white;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
         
-        .corner-flower{
-            position: absolute;
+        // .corner-flower{
+            // position: absolute;
             
-            width: 100%;
-            // height: 80%;
-            text-align: center;
-            margin-left: auto;
-            margin-right: auto;
-            // background-color: #701717;
-            top: -20%;
-            transform: rotate(20deg) ;
-
-
+            // width: 100%;
+            // // height: 80%;
+            // text-align: center;
+            // margin-left: auto;
+            // margin-right: auto;
+            // // background-color: #701717;
+            
+            
             .flwr_1{
-                position: relative;
+                top: -40%;
+                left: -1rem;
+                position: absolute;
                 width: 120%;
+                transform: rotate(20deg) ;
             }
-        }
+            .flwr_2{
+                bottom: -40%;
+                left: -3rem;
+                position: absolute;
+                width: 120%;
+                transform: rotate(200deg) ;
+            }
+        // }
         
         .text-card_container{
             .intro{
