--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -26,12 +26,16 @@ footer {
   display: grid;
   place-items: center;
 }
-.sctn .red-element {
+.sctn .red_up {
   position: absolute;
-  width: 130%;
+  width: 125%;
   top: -20%;
-  right: -60%;
-  transform: rotate(45deg);
+}
+.sctn .red_down {
+  position: absolute;
+  width: 125%;
+  bottom: -20%;
+  transform: rotate(180deg);
 }
 .sctn .corners {
   position: absolute;
