--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -37,26 +37,41 @@ footer {
   bottom: -20%;
   transform: rotate(180deg);
 }
-.sctn .corners {
+.sctn .leaves {
   position: absolute;
+  width: 40%;
 }
-.sctn .crnr-up {
-  top: 0;
-  width: 100%;
+.sctn .leave-1 {
+  bottom: -20%;
+  left: -10%;
+  transform: rotate(15deg);
 }
-.sctn .crnr-dwn {
-  bottom: 0;
-  width: 100%;
+.sctn .leave-2 {
+  top: -20%;
+  right: -10%;
+  transform: rotate(195deg);
+}
+.sctn .leave-3 {
+  width: 40%;
+  bottom: -5%;
+  left: -10%;
+  transform: rotate(13deg) scaleX(-1);
+}
+.sctn .leave-4 {
+  width: 40%;
+  bottom: -18%;
+  left: 0%;
+  transform: rotate(45deg);
 }
 .sctn .first-container {
+  width: 25rem;
+  height: 25rem;
   position: relative;
+  transform: rotate(45deg) skew(15deg, 15deg);
   z-index: 10;
   display: grid;
   grid-template-rows: repeat(2, 50%);
   place-items: center;
-  width: 80%;
-  height: 45%;
-  background-color: white;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 .sctn .first-container .flwr_1 {
