--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -52,31 +52,59 @@ $background_2:#E5DED9;
         transform: rotate(180deg);
     }
 
-    .corners{
+    .leaves{
         position: absolute;
-    }
-    .crnr-up{
-        top: 0;
-        width: 100%;
-    }
-    .crnr-dwn{
-        bottom: 0;
-        width: 100%;
+        width: 40%;
     }
 
+    .leave-1{
+        bottom: -20%;
+        left: -10%;
+        transform: rotate(15deg);
+    }
+    .leave-2{
+        top: -20%;
+        right: -10%;
+        transform: rotate(195deg);
+    }
+    
+    .leave-3{
+        width: 40%;
+        bottom: -5%;
+        left: -10%;
+        transform: rotate(13deg) scaleX(-1);
+    }
+    .leave-4{
+        width: 40%;
+        bottom: -18%;
+        left: 0%;
+        transform: rotate(45deg);
+    }
+    // .corners{
+    //     position: absolute;
+    // }
+    // .crnr-up{
+    //     top: 0;
+    //     width: 100%;
+    // }
+    // .crnr-dwn{
+    //     bottom: 0;
+    //     width: 100%;
+    // }
+
     .first-container{
+        width: 25rem;
+        height: 25rem;
         position: relative;
+        transform: rotate(45deg) skew(15deg, 15deg);
         z-index: 10;
         display: grid;
         grid-template-rows: repeat(2, 50%);
         // justify-content: center;
         // align-items: center;
         place-items: center;
-        width: 80%;
-        height: 45%;
-        background-color: white;
+        // background-color: white;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-        
         // .corner-flower{
             // position: absolute;
             
