--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -66,11 +66,19 @@ footer {
   text-transform: uppercase;
 }
 .sctn .first-container .main-text {
+  display: grid;
+  grid-template-rows: repeat(auto-fill, 3fr);
+  justify-content: center;
+  align-items: center;
   font-family: "Parisienne", cursive;
   text-transform: capitalize;
   font-size: 5rem;
   font-weight: 100;
-  line-height: 0.6;
+}
+.sctn .first-container .main-text .y {
+  font-size: 3rem;
+  margin-top: -0.5rem;
+  margin-bottom: -0.5rem;
 }
 .sctn .first-container .text-card_container .intro {
   font-family: "Work Sans";
