--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -37,49 +37,20 @@ $background_2:#E5DED9;
     display: grid;
     place-items: center;
 
-    .red_up{
+    .arrow{
         position: absolute;
-        width: 125%;
-        top: -20%;
-        // right: -60%;
-        // transform: rotate(45deg);
-    }
-    
-    .red_down{
-        position: absolute;
-        width: 125%;
-        bottom: -20%;
-        transform: rotate(180deg);
+        width: 80%;
     }
 
-    .leaves{
-        position: absolute;
-        width: 40%;
-    }
-
-    // .leave-1{
-    //     bottom: -20%;
-    //     left: -10%;
-    //     transform: rotate(15deg);
-    // }
-    // .leave-2{
+    // .red_up{
+    //     position: absolute;
+    //     width: 125%;
     //     top: -20%;
-    //     right: -10%;
-    //     transform: rotate(195deg);
+
     // }
     
-    // .leave-3{
-    //     width: 35%;
-    //     bottom: -5%;
-    //     left: -10%;
-    //     transform: rotate(20deg) scaleX(-1);
-    // }
-    // .leave-4{
-    //     width: 40%;
-    //     bottom: -20%;
-    //     left: 0%;
-    //     transform: rotate(50deg);
-    // }
+
+
     .leave-5{
         width: 70%;
         bottom: -5%;
@@ -92,23 +63,15 @@ $background_2:#E5DED9;
         right: -10%;
         transform: rotate(185deg);
     }
-    // .corners{
-    //     position: absolute;
-    // }
-    // .crnr-up{
-    //     top: 0;
-    //     width: 100%;
-    // }
-    // .crnr-dwn{
-    //     bottom: 0;
-    //     width: 100%;
-    // }
-
     .first-container{
         text-align: center;
+        display: grid;
+        
         .reason{
+            position: relative;
+            place-self: center;
+            top: .5rem;
             font-family: $work-sans;
-            margin-bottom: 1.5rem;
             font-size: 1rem;
             font-weight: 300;
             &::first-letter{
@@ -135,46 +98,6 @@ $background_2:#E5DED9;
             }
         }
 
-
-        // width: 25rem;
-        // height: 25rem;
-        // position: relative;
-        // transform: rotate(45deg) skew(15deg, 15deg);
-        // z-index: 10;
-        // display: grid;
-        // grid-template-rows: repeat(2, 50%);
-        // // justify-content: center;
-        // // align-items: center;
-        // place-items: center;
-        // // background-color: white;
-        // box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-        // .corner-flower{
-            // position: absolute;
-            
-            // width: 100%;
-            // // height: 80%;
-            // text-align: center;
-            // margin-left: auto;
-            // margin-right: auto;
-            // // background-color: #701717;
-            
-            
-            // .flwr_1{
-            //     top: -50%;
-            //     left: -1rem;
-            //     position: absolute;
-            //     width: 120%;
-            //     transform: rotate(20deg) ;
-            // }
-            // .flwr_2{
-            //     bottom: -50%;
-            //     left: -3rem;
-            //     position: absolute;
-            //     width: 120%;
-            //     transform: rotate(200deg) ;
-            // }
-        // }
-        
         .text-card_container{
             .intro{
                 font-family: $work-sans;
