--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -30,21 +30,26 @@ footer {
   position: absolute;
   width: 80%;
 }
-.sctn .flower-1 {
-  position: absolute;
+.sctn .flower-container {
   width: 45%;
+  position: absolute;
   top: 0;
+  right: -1rem;
 }
-.sctn .flower-1 .capullo-1 {
-  width: 1rem;
-  position: relative;
-  animation: leaves 10s linear infinite;
+.sctn .flower-container .capullo-1 {
+  bottom: 39%;
+  left: 12.5%;
+  width: 8%;
+  position: absolute;
+  animation: leaves 9s alternate-reverse infinite ease-in;
   transform-origin: bottom center;
 }
-.sctn .flower-1 .capullo-2 {
-  width: 1rem;
-  position: relative;
-  animation: leaves 15s linear infinite;
+.sctn .flower-container .capullo-2 {
+  bottom: 21%;
+  right: 8.2%;
+  width: 25%;
+  position: absolute;
+  animation: leaves2 10s alternate infinite ease-in;
   transform-origin: bottom center;
 }
 .sctn .leave-5 {
@@ -125,19 +130,24 @@ footer {
 
 @keyframes leaves {
   0% {
-    transform: rotate(1deg);
-  }
-  25% {
-    transform: rotate(0deg);
+    transform: rotate(5deg);
   }
   50% {
-    transform: rotate(-1deg);
-  }
-  75% {
     transform: rotate(0deg);
   }
-  10% {
-    transform: rotate(1deg);
+  100% {
+    transform: rotate(-17deg);
+  }
+}
+@keyframes leaves2 {
+  0% {
+    transform: rotate(9deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-20deg);
   }
 }
 
