--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -33,12 +33,12 @@ footer {
 .sctn .flower-container {
   width: 45%;
   position: absolute;
-  top: 0;
+  top: -1rem;
   right: -1rem;
 }
 .sctn .flower-container .capullo-1 {
   bottom: 39%;
-  left: 12.5%;
+  left: 13%;
   width: 8%;
   position: absolute;
   animation: leaves 9s alternate-reverse infinite ease-in;
