--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -46,12 +46,12 @@ $background_2:#E5DED9;
         // position: absolute;
         width: 45%;
         position: absolute;
-        top: 0;
+        top: -1rem;
         right: -1rem;
         
         .capullo-1{
             bottom: 39%;
-            left: 12.5%;
+            left: 13%;
             width: 8%;
             position: absolute;
             animation: leaves  9s alternate-reverse  infinite ease-in;
